--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,23 @@ env:
   global:
   - BINARYBUILDER_DOWNLOADS_CACHE=downloads
   - BINARYBUILDER_AUTOMATIC_APPLE=true
+  matrix:
+    - PART=1/5
+    - PART=2/5
+    - PART=3/5
+    - PART=4/5
+    - PART=5/5
 sudo: required
+jobs:
+  include:
+    - stage: regenerate build.jl
+      script: julia build_tarballs.jl --only-buildjl
+      if: tag IS present
 before_script:
 - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryProvider.jl")'
 - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryBuilder.jl"); Pkg.build()'
 script:
-- julia build_tarballs.jl
+- julia build_tarballs.jl --part=$PART
 deploy:
   provider: releases
   api_key:
